Attempt to fix some spacing with the tables and h4.
I do have to disclose the use of StackOverflow to help me out.

Relevant answer: https://stackoverflow.com/a/3209434

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,3 +18,12 @@
     color: #aaa;
     margin: 0 4px;
 }
+
+table {
+    border-collapse: separate;
+    border-spacing: 9px;
+}
+
+h4 {
+    margin-top: 7px;
+}
